<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item android:id="@+id/favorite"
        android:title="@string/favorite"
        android:icon = "@drawable/ic_baseline_star_border_24"
        app:showAsAction="collapseActionView|always"/>
    <group android:menuCategory="container" android:id="@+id/menu_group" >
        <item android:id="@+id/setting"
            android:title="@string/setting" />
    </group>
<!--    <item android:id="@+id/favorite"-->
<!--        android:title="@string/favorite"-->
<!--        android:icon = "@drawable/ic_baseline_star_border_24"-->
<!--        app:showAsAction="always" />-->
<!--    <item android:id="@+id/setting"-->
<!--        android:title="@string/setting"-->
<!--        android:icon = "@drawable/ic_baseline_settings_24"-->
<!--        app:showAsAction="always" />-->
</menu>