...
        android:textColor="@color/neutral_600"
        app:layout_constraintBottom_toBottomOf="@+id/loc_ico"
        app:layout_constraintStart_toEndOf="@+id/loc_ico"
        app:layout_constraintTop_toTopOf="@+id/loc_ico" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_follow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/follow"
...
